[gd_scene load_steps=4 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://collectibles-HD.png" type="Texture" id=2]
[ext_resource path="res://child.gd" type="Script" id=3]

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 100, 130 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 361, 466, 100, 112 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 10.0
margin/right = 68.0
margin/bottom = 24.0
text = "in main"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Polygon2D" type="Polygon2D" parent="."]

z/z = -1
polygon = Vector2Array( 0, 0, 490, 0, 490, 260, 0, 260 )
uv = Vector2Array(  )
color = Color( 0.15271, 0.28125, 0.260161, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 19.0
margin/right = 260.0
margin/bottom = 39.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to intance"
flat = false

[node name="Button1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 50.0
margin/right = 260.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to child"
flat = false

[node name="Button2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 80.0
margin/right = 260.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "free queue to intance"
flat = false

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 700, 110 )

[node name="Position2D2" type="Position2D" parent="."]

transform/pos = Vector2( 700, 440 )

[node name="Button 2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 200.0
margin/right = 463.0
margin/bottom = 220.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "creat intance1"
flat = false

[node name="Button3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 230.0
margin/right = 463.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "creat intance2"
flat = false

[node name="Button 3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = 223.0
margin/right = 127.0
margin/bottom = 243.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to child"
flat = false

[node name="Label 2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 204.0
margin/right = 142.0
margin/bottom = 218.0
text = "with Globals"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="child" type="Node2D" parent="."]

transform/pos = Vector2( 20, 320 )
script/script = ExtResource( 3 )

[node name="Sprite1" type="Sprite" parent="child"]

transform/pos = Vector2( 77.2792, 100 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 238, 836, 105, 115 )

[node name="Polygon2D1" type="Polygon2D" parent="child"]

transform/pos = Vector2( -20, 0 )
z/z = -1
polygon = Vector2Array( 0, 0, 490, 0, 490, 260, 0, 260 )
uv = Vector2Array(  )
color = Color( 0.480469, 0.394017, 0.228973, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label1" type="Label" parent="child"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 9.0
margin/right = 53.0
margin/bottom = 23.0
text = "in child"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="child"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 20.0
margin/right = 242.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to main"
flat = false

[node name="Button1" type="Button" parent="child"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 60.0
margin/right = 242.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to intance"
flat = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Button 2" to="." method="_on_Button_2_pressed"]

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Button 3" to="." method="_on_Button_3_pressed"]

[connection signal="pressed" from="child/Button" to="child" method="_on_Button_pressed"]

[connection signal="pressed" from="child/Button1" to="child" method="_on_Button1_pressed"]


